[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/InputADM.gd" type="Script" id=1]
[ext_resource path="res://Scripts/DownButton.gd" type="Script" id=2]
[ext_resource path="res://Scripts/fowardButton.gd" type="Script" id=3]
[ext_resource path="res://Scripts/ControlsMenu.gd" type="Script" id=4]
[ext_resource path="res://Scripts/RightButton.gd" type="Script" id=5]
[ext_resource path="res://Scripts/LeftButton.gd" type="Script" id=6]
[ext_resource path="res://Scripts/questButton.gd" type="Script" id=7]
[ext_resource path="res://Scripts/spaceButton.gd" type="Script" id=8]

[node name="ControlsMenu" type="Control"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -243.0
margin_top = -165.0
margin_right = 243.0
margin_bottom = 165.0
script = ExtResource( 4 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ExitButton_child" type="Button" parent="."]
margin_left = 424.0
margin_top = 290.0
margin_right = 477.0
margin_bottom = 321.0
text = "voltar"

[node name="DefaultButton" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_top = -41.0
margin_right = 163.0
margin_bottom = -10.0
grow_vertical = 2
text = "Recarregar Padrões"

[node name="Keys" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Up" type="Control" parent="Keys"]
margin_right = 40.0
margin_bottom = 40.0

[node name="UpButton" type="Button" parent="Keys/Up"]
margin_left = 155.0
margin_top = 32.0
margin_right = 181.0
margin_bottom = 63.0
focus_mode = 0
enabled_focus_mode = 0
text = "W"
script = ExtResource( 3 )

[node name="Label" type="Label" parent="Keys/Up"]
margin_left = 14.0
margin_top = 32.0
margin_right = 144.0
margin_bottom = 66.0
text = "Andar para cima"

[node name="space" type="Control" parent="Keys"]
margin_left = 250.0
margin_right = 290.0
margin_bottom = 40.0

[node name="spaceButton" type="Button" parent="Keys/space"]
margin_left = 155.0
margin_top = 32.0
margin_right = 181.0
margin_bottom = 63.0
focus_mode = 0
enabled_focus_mode = 0
text = "Space"
script = ExtResource( 8 )

[node name="Label" type="Label" parent="Keys/space"]
margin_left = 14.0
margin_top = 32.0
margin_right = 144.0
margin_bottom = 66.0
text = "Interagir
"
align = 1

[node name="Down" type="Control" parent="Keys"]
margin_top = 51.0
margin_right = 40.0
margin_bottom = 91.0

[node name="DownButton" type="Button" parent="Keys/Down"]
margin_left = 155.0
margin_top = 32.0
margin_right = 181.0
margin_bottom = 63.0
focus_mode = 0
enabled_focus_mode = 0
text = "S"
script = ExtResource( 2 )

[node name="Label" type="Label" parent="Keys/Down"]
margin_left = 14.0
margin_top = 32.0
margin_right = 144.0
margin_bottom = 66.0
text = "Andar para baixo"

[node name="Left" type="Control" parent="Keys"]
margin_top = 102.0
margin_right = 40.0
margin_bottom = 142.0
__meta__ = {
"_edit_group_": true
}

[node name="LeftButton" type="Button" parent="Keys/Left"]
margin_left = 155.0
margin_top = 32.0
margin_right = 181.0
margin_bottom = 63.0
focus_mode = 0
enabled_focus_mode = 0
text = "A"
script = ExtResource( 6 )
action = "Left"

[node name="Label" type="Label" parent="Keys/Left"]
margin_left = 14.0
margin_top = 32.0
margin_right = 144.0
margin_bottom = 66.0
text = "Andar para esquerda"

[node name="Right" type="Control" parent="Keys"]
margin_top = 153.0
margin_right = 40.0
margin_bottom = 193.0

[node name="RightButton" type="Button" parent="Keys/Right"]
margin_left = 155.0
margin_top = 32.0
margin_right = 181.0
margin_bottom = 63.0
focus_mode = 0
enabled_focus_mode = 0
text = "D"
script = ExtResource( 5 )
action = "Right"

[node name="Label" type="Label" parent="Keys/Right"]
margin_left = 14.0
margin_top = 32.0
margin_right = 144.0
margin_bottom = 66.0
text = "Andar para direita"

[node name="quest" type="Control" parent="Keys"]
margin_top = 204.0
margin_right = 40.0
margin_bottom = 244.0

[node name="questButton" type="Button" parent="Keys/quest"]
margin_left = 155.0
margin_top = 32.0
margin_right = 181.0
margin_bottom = 63.0
focus_mode = 0
enabled_focus_mode = 0
text = "Q"
script = ExtResource( 7 )

[node name="Label" type="Label" parent="Keys/quest"]
margin_left = 14.0
margin_top = 32.0
margin_right = 144.0
margin_bottom = 66.0
text = "Aba de Quests"

[node name="InputADM" type="ColorRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -223.0
margin_top = -94.0
margin_right = 223.0
margin_bottom = 94.0
color = Color( 0.247059, 0.247059, 0.247059, 1 )
script = ExtResource( 1 )

[node name="Label" type="Label" parent="InputADM"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -172.5
margin_right = 172.5
margin_bottom = 25.0
text = "Pressiona qualquer tecla para redefinir a ação"

[node name="Label2" type="Label" parent="InputADM"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -108.0
margin_top = -53.0
margin_right = 106.0
text = "Aperte \"Enter\" para confirmar
Aperte \"TAB\" para cancelar"

[node name="ColorRect" type="ColorRect" parent="InputADM"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -51.0
margin_top = -35.0
margin_right = 51.0
margin_bottom = 35.0
color = Color( 0.129412, 0.129412, 0.129412, 1 )

[node name="InputLabel" type="Label" parent="InputADM/ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -23.0
margin_top = -12.0
margin_right = 23.0
margin_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "D"
align = 1

[connection signal="pressed" from="ExitButton_child" to="." method="_on_ExitButton_child_pressed"]
[connection signal="pressed" from="DefaultButton" to="." method="_on_DefaultButton_pressed"]
[connection signal="my_pressed" from="Keys/Up/UpButton" to="." method="_on_Button_my_pressed"]
[connection signal="my_pressed" from="Keys/space/spaceButton" to="." method="_on_Button_my_pressed"]
[connection signal="my_pressed" from="Keys/Down/DownButton" to="." method="_on_Button_my_pressed"]
[connection signal="my_pressed" from="Keys/Left/LeftButton" to="." method="_on_Button_my_pressed"]
[connection signal="my_pressed" from="Keys/Right/RightButton" to="." method="_on_Button_my_pressed"]
[connection signal="my_pressed" from="Keys/quest/questButton" to="." method="_on_Button_my_pressed"]
[connection signal="action_edited" from="InputADM" to="." method="_on_InputADM_action_edited"]
